unpackaged/main/default/objects/adroll__RollWorks_Keyword_Intent__c/adroll__RollWorks_Keyword_Intent__c.object-meta.xml
<CustomObject>
    <label>RollWorks Keyword Intent</label>
    <nameField>
        <displayFormat>RWKI-{00000000}</displayFormat>
        <label>RollWorks Keyword Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Keywords Intent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>