unpackaged/main/default/objects/adroll__RollWorks_Keyword_Intent__c/fields/adroll__Account__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RollWorks Keywords Intent</relationshipLabel>
    <relationshipName>RollWorks_Keywords_Intent</relationshipName>
    <type>Lookup</type>
</CustomField>