unpackaged/main/default/objects/adroll__RollWorks_Keyword_Intent__c/fields/adroll__Date__c.field-meta.xml
<CustomField>
    <fullName>adroll__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>