unpackaged/main/default/objects/adroll__RollWorks_Keyword_Intent__c/fields/adroll__Keywords__c.field-meta.xml
<CustomField>
    <fullName>adroll__Keywords__c</fullName>
    <label>Keywords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>